basic VO template

--- a/client/src/components/sidebar/Sidebar.css
+++ b/client/src/components/sidebar/Sidebar.css
@@ -2,7 +2,7 @@
 .sidebar {
     margin: 0;
     padding: 0;
-    width: 200px;
+    width: 12%;
     background-color: #131313;
     position: fixed;
     height: 100%;
