--- a/client/src/components/vectorOverlay/VectorOverlay.css
+++ b/client/src/components/vectorOverlay/VectorOverlay.css
@@ -1,9 +1,60 @@
 .vector-overlay {
     padding-top: 2%;
     text-align: center;
-    margin-left: 15%;
-    margin-right: 15%;
+    margin-left: 5%;
+    margin-right: 5%;
 }
+
+h3 {
+    font-size: 52px;
+    text-align: left;
+}
+
+
+
+
+.project-description-container {
+    margin-top: 5%;
+}
+
+.project-description-p1 {
+    margin-right: 40%;
+    margin-bottom: 4%;
+}
+
+.project-description-p2 {
+    margin-left: 40%;
+    margin-bottom: 4%;
+}
+
+
+
+
+/* .video-container {
+    border-radius: 60px;
+    width: 60%;
+    background-color: black;
+} */
+
+.video-input-container {
+    padding-top: 5px;
+    border-radius: 60px;
+    width: 55%;
+    background-color: black;
+    margin-bottom: 5%;
+}
+
+.video-output-container {
+    padding-top: 5px;
+    margin-left: 35%;
+    border-radius: 60px;
+    width: 55%;
+    background-color: black;
+    margin-bottom: 5%;
+}
+
+
+
 
 .form-box {
     display: flex;
