--- a/client/src/components/sidebar/Sidebar.css
+++ b/client/src/components/sidebar/Sidebar.css
@@ -9,6 +9,12 @@
     overflow: auto;
 }
 
+.sidebar-link {
+  display: flex;
+  align-items: center;
+  color: #f8f8f8;
+}
+
 .sidebar a {
     text-decoration: none;
 }
