--- a/client/src/components/vectorOverlay/VectorOverlay.css
+++ b/client/src/components/vectorOverlay/VectorOverlay.css
@@ -143,7 +143,7 @@ h3 {
 .output-window {
     margin: 50px auto;
     background-color: #f2f2f2;
-    height: 400px;
+    /* height: 400px; */
     max-width: 800px;
     text-align: center;
 }
